kubernetes/iot/prod/home-assistant/external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external
spec:
  type: ExternalName
  externalName: campus.mrv.thebends.org
