kubernetes/iot/prod/home-assistant/external-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external
spec:
  ingressClassName: nginx-external
  rules:
  - host: home-assistant.prod.${site_domain}
    http:
      paths:
      - backend:
          service:
            name: external
            port:
              number: 8123
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: home-assistant-external-tls
    hosts:
    - home-assistant.prod.${site_domain}
